<resources>
    <string name="app_name">Güneşim Ol</string>
    <string name="title_home">Anasayfa</string>
    <string name="title_pecs">Pecs İletişim Sistemi</string>
    <string name="title_socialstory">Sosyal Öykü</string>
    <string name="ecizelge">Etkinlik Çizelgesi</string>
    <string name="title_uzman">Uzman Desteği</string>
    <string name="login_email">Email Adresinizi Giriniz</string>
    <string name="login_sifre">Şifrenizi Giriniz</string>
    <string name="social_story_form_q1">Öykünüz ne, nerede, nasıl, neden, ne zaman, kim sorularına yanıt veriyor mu?</string>
    <string name="social_story_form_q2">Öyküde olumlu cümleler kullandınız mı?</string>
    <string name="social_story_form_q3">Dört temel cümle çeşidine yer verdiniz mi?(betimleyici, yansıtıcı, doğrulayıcı, yönlendirici cümle)</string>
    <string name="social_story_form_q4">Cümle oranlarına dikkat ettiniz mi??</string>
    <string name="social_story_form_q5">Öykünüzü çoçuğunuz bakış açısından ve ağzından yazdınız mı?(örn: "oyuncaklarımı kardeşimle paylaşırsam annem çok sevinir.")</string>
    <string name="social_story_form_q6">Öykünüz çocuğunuzun anlayacağı açıklıkta yazılmış mı?</string>
    <string name="social_story_form_q7">Öykünüzün anlaşılması için görsel olarak kullandığınız resim vb.nin öykünüzün içeriğine uygun mu?</string>
    <string name="social_story_form_q8">Öykünüzde verilen örnekler çocuğunuzun gelişim düzeyine uygun mu?</string>
    <string name="social_story_audio">Hikayeniz için kaydettiğiniz sesi seçiniz(Eğer hikayenize seslendirme yaptıysanız) : </string>
    <string name="cizelge1">1.İki elini kullanarak makası açar/kapatır.</string>
    <string name="cizelge2">2.İki elini kullanarak makasla rastgele kâğıt keser.</string>
    <string name="cizelge3">3.Kullanmadığı eliyle makası tutar.</string>
    <string name="cizelge4">4.Diğer elinin baş ve orta parmağını makasın iki bölümüne yerleştirir.</string>
    <string name="cizelge5">5.Baş parmağı üstte olacak şekilde makası tutar.</string>
    <string name="cizelge6">6.Baş ve orta parmağını ters yönde hareket ettirerek makası açar/kapatır.</string>
    <string name="cizelge7">7.Kullanmadığı eliyle kâğıdın ortasından tutar.</string>
    <string name="cizelge8">8.Kâğıdın diğer kenarını makasın açık ağzına yerleştirir.</string>
    <string name="cizelge9">9.Baş ve orta parmağını ters yönde hareket ettirerek kâğıdı rastgele keser.</string>


</resources>
