<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_pecs"
        android:icon="@drawable/pecs"
        android:title="@string/title_pecs" />

    <item
        android:id="@+id/navigation_socialstory"
        android:icon="@drawable/story"
        android:title="@string/title_socialstory" />
    <item
        android:id="@+id/navigation_ecizelge"
        android:icon="@drawable/ecizelge"
        android:title="@string/ecizelge" />

    <item
        android:id="@+id/navigation_uzman"
        android:icon="@drawable/uzman"
        android:title="@string/title_uzman" />


</menu>
